--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
-        input, button {
+        input, button, select {
             padding: 8px;
             margin: 5px 0;
             width: calc(100% - 16px);
@@ -43,11 +43,34 @@
         .task {
             padding: 10px;
             border-bottom: 1px solid #ddd;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: space-between;
+        }
+        .task-info {
+            flex-grow: 1;
+            margin-right: 10px;
+        }
+        .task-controls {
+            display: flex;
+            align-items: center;
+        }
+        .task-controls select,
+        .task-controls button {
+            width: auto;
+            margin-left: 5px;
         }
         .error {
             color: red;
             display: none;
             margin-top: 10px;
+        }
+        .sort-controls {
+            margin-bottom: 20px;
+        }
+        .sort-controls label {
+            margin-right: 10px;
         }
     </style>
 </head>
@@ -57,10 +80,16 @@
         
         <!-- Create Task Section -->
         <h2>Crear Tarea</h2>
+        <input type="number" id="taskId" placeholder="ID de Tarea (solo números)" min="1">
         <input type="text" id="taskTitle" placeholder="Título de la Tarea">
         <input type="text" id="taskDesc" placeholder="Descripción">
         <input type="date" id="taskDueDate">
-        <input type="number" id="taskPriority" placeholder="Prioridad (1-3)" min="1" max="3">
+        <select id="taskPriority">
+            <option value="">-- Seleccionar Prioridad --</option>
+            <option value="1">Alta</option>
+            <option value="2">Media</option>
+            <option value="3">Baja</option>
+        </select>
         <button onclick="createTask()">Crear Tarea</button>
 
         <!-- Search Task Section -->
@@ -72,26 +101,58 @@
 
         <!-- Task List -->
         <h2>todas las tareas:</h2>
+
+        <!-- Sorting Controls -->
+        <div class="sort-controls">
+            <label for="sortCriteria">Ordenar por:</label>
+            <select id="sortCriteria" onchange="sortAndDisplayTasks()">
+                <option value="priority">Prioridad (Alta a Baja)</option>
+                <option value="due_date">Fecha de Vencimiento</option>
+                <option value="title">Título</option>
+                <option value="status">Estado</option>
+            </select>
+        </div>
+
         <div id="taskList"></div>
     </div>
 
     <script>
+        let allTasks = [];
+
         async function createTask() {
+            const id = parseInt(document.getElementById('taskId').value);
             const title = document.getElementById('taskTitle').value.trim();
             const desc = document.getElementById('taskDesc').value.trim();
             const dueDate = document.getElementById('taskDueDate').value;
             const priority = parseInt(document.getElementById('taskPriority').value);
 
+            if (isNaN(id) || id <= 0) {
+                alert('Please enter a valid positive integer for Task ID.');
+                return;
+            }
+
             if (!title || !dueDate || isNaN(priority) || priority < 1 || priority > 3) {
-                alert('Please fill all fields correctly. Priority must be 1-3.');
+                alert('Please fill all required fields correctly (Title, Due Date, and select a Priority).');
+                return;
+            }
+
+            const today = new Date();
+            today.setHours(0, 0, 0, 0);
+
+            const selectedDate = new Date(dueDate);
+            selectedDate.setHours(0, 0, 0, 0);
+
+            if (selectedDate < today) {
+                alert('Due Date cannot be in the past.');
                 return;
             }
 
             const taskData = {
-                title,
+                id: id,
+                title: title,
                 description: desc,
                 due_date: dueDate,
-                priority,
+                priority: priority,
                 status: 'Pending'
             };
 
@@ -105,11 +166,11 @@
                 });
 
                 if (response.ok) {
-                    await displayTasks();
+                    await fetchAndDisplayTasks();
                     clearCreateForm();
                 } else {
                     const errorData = await response.json();
-                    alert(errorData.error);
+                    alert(errorData.message || 'Failed to create task');
                 }
             } catch (error) {
                 console.error('Error creating task:', error);
@@ -125,17 +186,24 @@
             resultDiv.innerHTML = '';
             errorDiv.style.display = 'none';
 
+            if (isNaN(id)) {
+                alert('Please enter a valid task ID.');
+                return;
+            }
+
             try {
                 const response = await fetch(`http://localhost:8080/tasks/${id}`);
                 if (response.ok) {
                     const task = await response.json();
                     resultDiv.innerHTML = `
-                        ID: ${task.id}<br>
-                        Title: ${task.title}<br>
-                        Description: ${task.description}<br>
-                        Due Date: ${task.due_date}<br>
-                        Priority: ${task.priority}<br>
-                        Status: ${task.status}
+                        <div class="task-info">
+                            ID: ${task.id}<br>
+                            Title: ${task.title}<br>
+                            Description: ${task.description}<br>
+                            Due Date: ${task.due_date}<br>
+                            Priority: ${task.priority}<br>
+                            Status: ${task.status}
+                        </div>
                     `;
                 } else if (response.status === 404) {
                     errorDiv.style.display = 'block';
@@ -148,21 +216,101 @@
             }
         }
 
-        async function displayTasks() {
+        async function updateTaskStatus(taskId, newStatus) {
+            try {
+                const response = await fetch(`http://localhost:8080/tasks/${taskId}`, {
+                    method: 'PUT',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ status: newStatus })
+                });
+
+                if (response.ok) {
+                    await fetchAndDisplayTasks();
+                } else {
+                    const errorData = await response.json();
+                    alert(errorData.error || 'Failed to update task status');
+                }
+            } catch (error) {
+                console.error('Error updating task status:', error);
+                alert('Failed to update task status');
+            }
+        }
+
+        function renderTasks(tasksToDisplay) {
             const taskList = document.getElementById('taskList');
             taskList.innerHTML = '';
+
+            if (!tasksToDisplay || tasksToDisplay.length === 0) {
+                taskList.innerHTML = '<p>No tasks found.</p>';
+                return;
+            }
+
+            function getPriorityString(priority) {
+                switch (priority) {
+                    case 1:
+                        return 'Alta';
+                    case 2:
+                        return 'Media';
+                    case 3:
+                        return 'Baja';
+                    default:
+                        return 'Desconocida';
+                }
+            }
+
+            tasksToDisplay.forEach(task => {
+                const taskDiv = document.createElement('div');
+                taskDiv.className = 'task';
+                taskDiv.innerHTML = `
+                    <div class="task-info">
+                        ID: ${task.id} | ${task.title} | Due: ${task.due_date} | Priority: ${getPriorityString(task.priority)} | Status: ${task.status}
+                    </div>
+                    <div class="task-controls">
+                        <select id="status-${task.id}">
+                            <option value="Pending" ${task.status === 'Pending' ? 'selected' : ''}>Pending</option>
+                            <option value="In Progress" ${task.status === 'In Progress' ? 'selected' : ''}>In Progress</option>
+                            <option value="Completed" ${task.status === 'Completed' ? 'selected' : ''}>Completed</option>
+                        </select>
+                        <button onclick="updateTaskStatus(${task.id}, document.getElementById('status-${task.id}').value)">Update Status</button>
+                    </div>
+                `;
+                taskList.appendChild(taskDiv);
+            });
+        }
+
+        function sortAndDisplayTasks() {
+            const criteria = document.getElementById('sortCriteria').value;
+            let sortedTasks = [...allTasks];
+
+            switch (criteria) {
+                case 'priority':
+                    sortedTasks.sort((a, b) => a.priority - b.priority);
+                    break;
+                case 'due_date':
+                    sortedTasks.sort((a, b) => new Date(a.due_date) - new Date(b.due_date));
+                    break;
+                case 'title':
+                    sortedTasks.sort((a, b) => a.title.localeCompare(b.title));
+                    break;
+                case 'status':
+                    sortedTasks.sort((a, b) => a.status.localeCompare(b.status));
+                    break;
+                default:
+                    sortedTasks.sort((a, b) => a.priority - b.priority);
+                    break;
+            }
+
+            renderTasks(sortedTasks);
+        }
+
+        async function fetchAndDisplayTasks() {
             try {
                 const response = await fetch('http://localhost:8080/tasks');
                 if (response.ok) {
-                    const tasks = await response.json();
-                    tasks.forEach(task => {
-                        const taskDiv = document.createElement('div');
-                        taskDiv.className = 'task';
-                        taskDiv.innerHTML = `
-                            ID: ${task.id} | ${task.title} | Due: ${task.due_date} | Priority: ${task.priority} | Status: ${task.status}
-                        `;
-                        taskList.appendChild(taskDiv);
-                    });
+                    allTasks = await response.json();
+                    sortAndDisplayTasks();
                 } else {
                     alert('Error fetching tasks');
                 }
@@ -173,14 +321,14 @@
         }
 
         function clearCreateForm() {
+            document.getElementById('taskId').value = '';
             document.getElementById('taskTitle').value = '';
             document.getElementById('taskDesc').value = '';
             document.getElementById('taskDueDate').value = '';
             document.getElementById('taskPriority').value = '';
         }
 
-        // Load tasks on page load
-        displayTasks();
+        fetchAndDisplayTasks();
     </script>
 </body>
 </html>
